--- a/test.html
+++ b/test.html
@@ -269,7 +269,6 @@
             border-radius: 10px;
             background: var(--glass);
             color: #cfe3ff;
-            font-size: 16px;
         }
         
         .quick-card b {
@@ -1090,7 +1089,7 @@
     
     <!-- ===== AUTH MODAL ===== -->
     <dialog id="auth" style="border:none;padding:0;background:transparent">
-        <form method="dialog" style="background:rgba(9,14,25,.9);border:1px solid var(--edge);border-radius:16px;padding:18px;width:min(92vw,420px);color:var(--text)">
+        <form method="dialog" style="background:rgba(9,14,25,.9);border:1px solid var(--edge);border-radius:16px;padding:18px;width:min(92vw,420px;color:var(--text)">
             <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px">
                 <h3 style="margin:0">Login</h3>
                 <button class="icon-btn" style="width:36px;height:36px" aria-label="Close" onclick="document.getElementById('auth').close()">
